# kvt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AUTOCONFIG.md
src/kvt/: __main__.py  app.py  app.tcss  config.py  constants.py  models.py  providers.py  providers_azure.py  providers_azure_hybrid.py
src/kvt/azure/: client.py
src/kvt/domain/: secrets.py
src/kvt/screens/: add.py  add.tcss  confirm.py  confirm.tcss  context_picker.py  context_picker.tcss  edit.py  edit.tcss  help.py  help.tcss  multiline_view.py  multiline_view.tcss  rename.py  save_confirm.py  save_confirm.tcss
src/kvt/tools/: __init__.py
src/kvt/tools/autoconfig/: __init__.py  __main__.py  main.py
src/kvt/widgets/: env_table.py  env_table.tcss  env_tabs.py  env_tabs.tcss  main_view.py  main_view.tcss
tests/: test_config.py  test_domain.py  test_models.py  test_providers.py  test_save_confirm.py  test_smoke.py
