[project]
name = "kvt"
version = "0.1.0"
description = "Azure Key Vault TUI — manage .env secrets in your terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
kvt = "kvt.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kvt"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a9",
    "pytest>=8",
    "textual-dev>=1.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ty.environment]
python = ".venv/bin/python"
